[tool.poetry]
name = "behave_to_cucumber"
version = "0.1.8"
description = "该项目主要用于将behave框架生成的behave.json转换为cucumber.json"
authors = ["chineseluo <848257135@qq.com>"]
repository = "https://github.com/chineseluo/behave_to_cucumber"

keywords = ["behave", "cucumber", "covert", "BEHAVE", "CUCUMBER"]
[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
btc = "behave_to_cucumber.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
